# PopiEngine

./: .gitignore  CMakeLists.txt  README.md
popi/engine/include/: camera.h  components.h  entity.h  graphics.h  importer.h  popiinput.h  project.h  s_playerInput.h  scene.h  scripts.h  settings.h  terrain.h  ui.h  utils.h
popi/engine/src/: UI.cpp  camera.cpp  entity.cpp  graphics.cpp  importer.cpp  input.cpp  main.cpp  project.cpp  terrain.cpp  utils.cpp
popi/include/: graphics.h  importer.h  main.h  settings.h  ui.h
popi/src/: graphics.cpp  importer.cpp  main.cpp
resources/: ver
resources/mesh/: AzaleaBushViolet.mtl
resources/scenes/: 0_test.popisc  default.popisc
resources/shaders/: lit.frag  lit.vert  phong.frag  phong.vert  unlit.frag  unlit.vert
resources/textures/retroTexturesB/: README.html
resources/textures/retroTexturesB/Demo/: Demo.blend
